; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_affinity.c_node_affinity_allocate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_affinity.c_node_affinity_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hfi1_affinity_node = type { i32, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@u16 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.hfi1_affinity_node* (i32)* @node_affinity_allocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.hfi1_affinity_node* @node_affinity_allocate(i32 %0) #0 {
  %2 = alloca %struct.hfi1_affinity_node*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.hfi1_affinity_node*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.hfi1_affinity_node* @kzalloc(i32 12, i32 %5)
  store %struct.hfi1_affinity_node* %6, %struct.hfi1_affinity_node** %4, align 8
  %7 = load %struct.hfi1_affinity_node*, %struct.hfi1_affinity_node** %4, align 8
  %8 = icmp ne %struct.hfi1_affinity_node* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.hfi1_affinity_node* null, %struct.hfi1_affinity_node** %2, align 8
  br label %22

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.hfi1_affinity_node*, %struct.hfi1_affinity_node** %4, align 8
  %13 = getelementptr inbounds %struct.hfi1_affinity_node, %struct.hfi1_affinity_node* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @u16, align 4
  %15 = call i32 @alloc_percpu(i32 %14)
  %16 = load %struct.hfi1_affinity_node*, %struct.hfi1_affinity_node** %4, align 8
  %17 = getelementptr inbounds %struct.hfi1_affinity_node, %struct.hfi1_affinity_node* %16, i32 0, i32 2
  store i32 %15, i32* %17, align 4
  %18 = load %struct.hfi1_affinity_node*, %struct.hfi1_affinity_node** %4, align 8
  %19 = getelementptr inbounds %struct.hfi1_affinity_node, %struct.hfi1_affinity_node* %18, i32 0, i32 1
  %20 = call i32 @INIT_LIST_HEAD(i32* %19)
  %21 = load %struct.hfi1_affinity_node*, %struct.hfi1_affinity_node** %4, align 8
  store %struct.hfi1_affinity_node* %21, %struct.hfi1_affinity_node** %2, align 8
  br label %22

22:                                               ; preds = %10, %9
  %23 = load %struct.hfi1_affinity_node*, %struct.hfi1_affinity_node** %2, align 8
  ret %struct.hfi1_affinity_node* %23
}

declare dso_local %struct.hfi1_affinity_node* @kzalloc(i32, i32) #1

declare dso_local i32 @alloc_percpu(i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
